--- a/EqUiWebUi/Areas/Welding/Views/WM/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/WM/Index.cshtml
@@ -19,12 +19,10 @@
 
     <p></p>
 
-    @MyHtmlHelpers.EquiLink("/Welding/WM/BrownFieldLastMeasurement", "fab fa-qq", "Last Weld Measurements GA2", helperText: "omschrijving =>> Automatische lijst met de laatste Weld voor iedere spot GA2")
+    @MyHtmlHelpers.EquiLink("/Welding/WM/LastWelds", "fab fa-qq", "Last Welds GA", helperText: "omschrijving =>> Automatische lijst met de laatste Weld voor iedere spot")
 
     <p></p>
-
-    @MyHtmlHelpers.EquiLink("/Welding/WM/GreenFieldLastMeasurement", "fab fa-qq", "Last Weld Measurements GA1 en GA4", helperText: "omschrijving =>> Automatische lijst met de laatste Weld voor iedere spot GA1 en GA4")
-    <p></p>
+  
     @MyHtmlHelpers.EquiLink("/Welding/WM/WMTV", "fab fa-qq", "TV", helperText: "Qis system, live weldfaults factory, online timers")
     <p></p>
 
