--- a/EqUiWebUi/Areas/Welding/Views/Launch/ComparePitchV316.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Launch/ComparePitchV316.cshtml
@@ -11,7 +11,7 @@
 {
     columns.Add(c => c.timerNumber).Titled("TimerNumber");
     columns.Add(c => c.lastWeldTime).Titled("lastWeldTime");
-    columns.Add(c => c.spotid).Titled("spotid");
+ //   columns.Add(c => c.spotid).Titled("spotid");
     columns.Add(c => c.Timer).Titled("TimerInPitch");
     //columns.Add(c => c.Variant).Titled("Variant");
     columns.Add(c => c.lastULControleTime).Titled("ULControl?").Formatted("{0:dd-MM-yyyy HH:mm:ss}");
