--- a/EqUiWebUi/Areas/Alert/Views/L_controlLimits/_ControlLimitsGrid.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/L_controlLimits/_ControlLimitsGrid.cshtml
@@ -8,7 +8,8 @@
     columns.Add(c => c.alarmobject).Titled("alarmobject");
     columns.Add(c => c.UpperLimit).Titled("UCL");
     columns.Add(c => c.LowerLimit).Titled("LCL");
-    columns.Add(c => c.l_variants.variantGroup).Titled("variantGroup");
+    columns.Add(c => c.UpperLimit - c.LowerLimit).Titled("Delta").Filterable(true);
+    columns.Add(c => c.l_variants.variantGroup).Titled("variantGroup").Css("d-none");
     columns.Add(c => c.Comment).Titled("Comment");
     columns.Add(c => c.isdead).Titled("isdead");
     //add edit button
