--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 </div>
 
 
-<div class="card">
+<div class="card d-none">
     <div class="card-header ani_PulseRed">
         <h5 class="card-title text-dark">
             URGENT MESSAGE!
