--- a/EqUiWebUi/Areas/Welding/Views/WM/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/WM/Index.cshtml
@@ -23,7 +23,7 @@
 
     <p></p>
   
-    @MyHtmlHelpers.EquiLink("/Welding/WM/WMTV", "fab fa-qq", "TV", helperText: "Qis system, live weldfaults factory, online timers")
+    @MyHtmlHelpers.EquiLink("/Welding/WM/TV", "fab fa-qq", "TV", helperText: "Qis system, live weldfaults factory, online timers")
     <p></p>
 
 </div>
