--- a/EqUiWebUi/Areas/Welding/Views/WM/TV.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/WM/TV.cshtml
@@ -1,12 +1,15 @@
 ﻿
-<h1>TimerConnections</h1>
+<center><h1>TimerConnections</h1></center>
+<p></p>
+
 <div data-name="ConnectionState" class="mvc-grid"></div>
 
 <hr /><hr /><hr /><hr />
 
 
 
-<h1>QisCheck</h1>
+<center><h1>QisCheck</h1></center>
+<p></p>
 <div data-name="QISViewer" class="mvc-grid"></div>
 
 <hr /><hr /><hr /><hr />
