basic vwsc grids up

--- a/EqUiWebUi/Areas/VWSC/Views/vwsc/Index.cshtml
+++ b/EqUiWebUi/Areas/VWSC/Views/vwsc/Index.cshtml
@@ -59,3 +59,20 @@
     </div>
 </div>
 
+<hr />
+
+<div class="card">
+    <div class="card-header bg-danger">
+        <h5 class="card-title text-white">
+            VWSC DATA
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
+    </div>
+
+    <br />
+    @MyHtmlHelpers.EquiLink("/vwsc/vwsc/rt_job", "fas fa-briefcase", "rt_job", helperText: "All rt_jobs joins with the first breakdown if any")
+    <br />
+
+
+</div>
+
