--- a/EqUiWebUi/Views/Shared/_Layout.cshtml
+++ b/EqUiWebUi/Views/Shared/_Layout.cshtml
@@ -63,7 +63,9 @@
 
                     <a href="#"><span style="padding-left:20px" class=""></span></a>
 
-                    <a class="fas fa-cog fa-1x text-danger" href='@Url.Action("Settings", "Home", new { area = "" }, null)' data-toggle="tooltip" title="admin area"></a>
+                    <a class="fas fa-cog fa-2x text-danger" href='@Url.Action("Settings", "Home", new { area = "" }, null)' data-toggle="tooltip" title="admin area"></a>
+
+                    <a href="#"><span style="padding-left:20px" class=""></span></a>
 
                     <a class="fas fa-arrows-alt text-white" id="fullscreenNav" data-toggle="tooltip" data-placement="left" title="Go fullscreen"></a>
 
