--- a/EqUiWebUi/Areas/Welding/Views/WM/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/WM/Index.cshtml
@@ -18,10 +18,6 @@
     </div>
 
     <p></p>
-
-    @MyHtmlHelpers.EquiLink("/Welding/WM/LastWelds", "fab fa-qq", "Last Welds GA", helperText: "omschrijving =>> Automatische lijst met de laatste Weld voor iedere spot")
-
-    <p></p>
   
     @MyHtmlHelpers.EquiLink("/Welding/WM/TV", "fab fa-qq", "TV", helperText: "Qis system, live weldfaults factory, online timers")
     <p></p>
@@ -32,7 +28,7 @@
 <div class="card">
     <div class="card-header bg-primary">
         <h5 class="card-title text-white">
-            Welding Master Personal pages
+            Data Tools
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up  fa-rotate-180 fa-1"></i></span>
         </h5>
     </div>
@@ -44,11 +40,7 @@
 
         <p></p>
 
-        @MyHtmlHelpers.EquiLink("/Welding/WM/Coppejens Jens", "fab fa-qq", "Coppejans Jens", helperText: "personal workflow")
-
-        <p></p>
-
-        @MyHtmlHelpers.EquiLink("/Welding/WM/Leemans Thomas", "fab fa-qq", "Leemans Thomas", helperText: "personal workflow")
+     
 
     </div>
     <p></p>
