--- a/EqUiWebUi/Areas/Welding/Views/Welding/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Welding/Index.cshtml
@@ -16,7 +16,7 @@
     <div class="card-body">
         @*voorbeeld externe link*@
         @{
-            string urlIntranetSupervis = @Uri.EscapeDataString("http://webapps.gen.volvocars.net/applications/eng/equipment/supervisiep1/intranet");
+            string urlIntranetSupervis = @Uri.EscapeDataString("Z:\\OBJECTBEHEER GA\\Spot Welding\\Rapportering\\Teambord\\electronisch teambord uitgebreid\\index.html");
             <p>
                 <a href="~/Home/Rendersite?url=@urlIntranetSupervis" class="btn btn-primary btn-sm">Supervisie Intranet P1 &raquo;</a>
                 Supervisie (intranet)
