--- a/EqUiWebUi/Areas/Welding/Views/Qteam/rt_AutoWorkFlowULPlans.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Qteam/rt_AutoWorkFlowULPlans.cshtml
@@ -11,11 +11,11 @@
     columns.Add(c => c.UL_Plan).Titled("UL_Plan");
     columns.Add(c => c.LastnumberFromPlanBusy).Titled("Planbusy");
     //columns.Add(c => c)
-      //  .Titled("Planbusy")
-        //.Encoded(false)
-       // .RenderedAs(c => "<div class='bg-danger'>Test</div>");
-    columns.Add(c => c.Planlenght).Titled("Planlenght").Css("bolded");
-    columns.Add(c => c.Last30min_productionStatus).Titled("Last30min_productionStatus");
+    //  .Titled("Planbusy")
+    //.Encoded(false)
+    // .RenderedAs(c => "<div class='bg-danger'>Test</div>");
+    columns.Add(c => c.Planlenght).Titled("Planlenght");
+    columns.Add(c => c.Last30min_productionStatus).Titled("Last30min_productionStatus").Css("bolded");
     columns.Add(c => c.BuildBody).Titled("BuildBody").InitialSort(GridSortOrder.Desc);
     columns.Add(c => c.WorkGroup).Titled("WorkGroup");
 
@@ -26,8 +26,9 @@
     //{ 20, "20" }, { 40, "40" }, { 80, "80" }, { 100, "100" } };
     pager.ShowPageSizes = true;
 }
-).Sortable()
+).Sortable().RowCss(model => model.LastnumberFromPlanBusy > 0 ? "red" : "")
 
+//RowCss(model => model.LastnumberFromPlanBusy > 0 ? "red" : "").RowCss(model => model.BuildBody < 200 ? "green" : "")
 
 
 @section scripts{
@@ -35,15 +36,15 @@
         //full with screen
         $("#allcontent").removeClass("body-content");
         $("#allcontent").removeClass("container");
-      //  $actualRow.css('background-color', '#0094ff');
-                       // $("#allcontent").html("<i class='fas fa-spinner fa-spin fa-2x'></i>")
+        //  $actualRow.css('background-color', '#0094ff');
+        // $("#allcontent").html("<i class='fas fa-spinner fa-spin fa-2x'></i>")
 
 
         //function to refresh grid
         function refreshGrid() {
             console.log('function is being called')
             $('[data-name="rt_AutoWorkFlowULPlans"]').mvcgrid({
-                reload: true, 
+                reload: true,
 
                 reloadStarted: function () {
                     // this - grid instance which invoked the event
@@ -60,7 +61,8 @@
 
         setInterval(function () {
             refreshGrid()
-        }, 1000*60)
+        }, 1000 * 60)
+
 
     </script>
     <style>
@@ -68,9 +70,26 @@
             display: none;
         }
 
+        .red {
+            background-color: #ff0000;
+        }
+
         .bolded {
             font-weight: bold;
         }
+
+        .green {
+            background-color: rgba(76, 255, 0, 0.21);
+        }
+
+        .Yellow {
+            background-color: rgba(0, 0, 0, 0.36)
+        }
+
+        .redd {
+            background-color: rgba(233, 25, 25, 0.41)
+        }
     </style>
+
 }
 
