--- a/EqUiWebUi/Areas/Welding/Views/Welding/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Welding/Index.cshtml
@@ -10,7 +10,7 @@
     <div class="card-header bg-dark">
         <h5 class="card-title text-white">
             Home Page WeldingTeam
-            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-rotate-180 fa-1"></i></span>
         </h5>
     </div>
     <div class="card-body">
