--- a/EqUiWebUi/Areas/Gadata/Views/Table/PloegRapportWebgrid.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/PloegRapportWebgrid.cshtml
@@ -57,7 +57,7 @@
                     $(row).addClass("bg-info");
                     $("#placeholder").remove(); //clear placeholder is exists
                     //add new placeholder afhter selected row
-                    $(row).after('<tr id="placeholder"><td colspan="1000"><div class="card bg-info"><div data-name="SupervisieGrid" class="mvc-grid card-body"></div></div></td></tr>');
+                    $(row).after('<tr id="placeholder"><td colspan="1000"><div class="card border-info"><div data-name="SupervisieGrid" class="mvc-grid card-body"></div></div></td></tr>');
                     //animation
                     $('[data-name="SupervisieGrid"]').html("<i class='fas fa-spinner fa-spin fa-2x'></i>");
                     //load supervisiegird in placeholder
