--- a/EqUiWebUi/Areas/Welding/Views/Shared/_Layout.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Shared/_Layout.cshtml
@@ -30,12 +30,12 @@
                         Shortcuts AASPOT
                     </a>
                     <ul class="dropdown-menu">
-                        <li class="dropdown-item">
-                            <a href="https://google.com">Google</a>
+                       
+                         
                         </li>
-                        <li class="dropdown-divider"></li>
-                        <li class="dropdown-item">
-                            <a href="https://www.strava.com/">Strava</a>
+                       <li class="dropdown-divider"></li>
+                        
+                          
                         </li>
                     </ul>
                 </li>
@@ -99,7 +99,7 @@
     <!--footer-->
     <hr />
     <footer id="footer">
-        <p>&copy; @DateTime.Now.Year - VCG GA Jens zijn Application</p>
+        <p>&copy; @DateTime.Now.Year - VCG GA Application Coppejans Jens</p>
     </footer>
     @*when navbar is hidden this is visble*@
     <div class="pull-right">
