--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -145,5 +145,9 @@
             <a href="~/tableau/EmbeddedDesktop?workbook=PBM_Augustus2018&sheet=Dashboard1" class="btn btn-primary btn-sm">PBMkosten &raquo;</a>
             Opvolging van kosten beschermingsmiddelen per team
         </p>
+        <p>
+            <a href="~/tableau/Embedded4K?workbook=Equi_HOP_MalfunctionAnalysis_AFG&sheet=4KHOPAnalysis" class="btn btn-primary btn-sm">4KHOPAnalysis &raquo;</a>
+            A-Shop downtime Analysis
+        </p>
     </div>
 </div>
