--- a/EqUiWebUi/Views/Tableau/Embedded4K.cshtml
+++ b/EqUiWebUi/Views/Tableau/Embedded4K.cshtml
@@ -3,12 +3,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<html>
-<head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="http://public.tableau.com/javascripts/api/tableau-2.0.0.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+@*render the viz*@
+<div id="viz" class="viz"></div>
 
+
+@section scripts{
+    <script src="~/Scripts/tableau-2.0.0.min.js"></script>
+    <!--tableau scripts-->
     <script>
         /**
          * Instantiate our vizualization.
@@ -26,7 +27,6 @@
                 var url = 'https://tableau-test.volvocars.biz/t/Ghent/views/'.concat('@ViewBag.workbook').concat('/').concat('@ViewBag.sheet');
             }
 
-
             var size = findDashboardSize();
             var vizOptions = {
                 embed: true,
@@ -39,7 +39,8 @@
                 onFirstInteractive: function (e) {
                     $('.viz iframe').attr("scrolling", "no");
                     $('.viz iframe').css('overflow', 'hidden');
-                }
+                },
+                'LocationTreeFilter': '@ViewBag.LocationTreeFilter'
             };
 
             new tableauSoftware.Viz(document.getElementById('viz'), url, vizOptions)
@@ -50,8 +51,8 @@
         https://en.wikipedia.org/wiki/Display_resolution#/media/File:Vector_Video_Standards8.svg
          */
         function findDashboardSize() {
-            var minHeight = 2160;
-            var maxHeight = 2160;
+            var minHeight = 2160+50;
+            var maxHeight = 2160+50;
             var minWidth = 2560;
 
             // The minus 100px leaves us room for the header/footer. Adjust as needed.
@@ -99,19 +100,5 @@
         //full with screen
         $("#allcontent").removeClass("body-content");
         $("#allcontent").removeClass("container");
-
-
     </script>
-</head>
-<body>
-    @*render the viz*@
-    <p></p>
-    <p></p>
-    <div id="viz"></div>
-</body>
-</html>
-
-
-
-
-
+}
