--- a/EqUiWebUi/Areas/Welding/Views/WM/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/WM/Index.cshtml
@@ -18,9 +18,10 @@
     </div>
 
     <p></p>
-  
     @MyHtmlHelpers.EquiLink("/Welding/WM/TV", "fab fa-qq", "TV", helperText: "Qis system, live weldfaults factory, online timers")
+
     <p></p>
+    @MyHtmlHelpers.EquiLink("/Welding/WM/_TimerBreakdownDatachange", "fab fa-qq", "TimerBreakdownDatachange", helperText: "All TimerBreakDowns with datachange WM")
 
 </div>
 <p></p>
